--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT = 4000
 MONGO_URI = mongodb+srv://komodo:XQKq86oHc8GBzrnm@cluster0.6vpdaze.mongodb.net/?retryWrites=true&w=majority
+
+FRONTEND_URL = http://localhost:5173
